# iBridges

./: .dockerignore  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  README_CLI.md  Tutorial_iRODS_paths.ipynb  Tutorial_irodsConnector.ipynb  Tutorial_sync.ipynb  _quarto.yml  docker-compose.yml  iBridges.py  iBridgesCli.py  iBridgesGui-HowTo.md  index.qmd  irods-iBridgesCli.py  irods-iBridgesGui.py  pyinstaller_script.py  pyproject.toml  requirements.txt  requirements_dev.txt  sync.py  sync_test.py  weg.py  weg2.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: integration-tests-irods.yml  integration-tests-yoda.yml  lint.yml  main.yml  publish.yaml  publish.yml  pypi_release.yml  windows.yml
IrodsConnector/: Icommands.py  __init__.py  dataOperations.py  pythonClient.py  resource.py  session.py
basicIrodsGUI/: .main.py.swp  irodsBrowser.ui  main.py
docker/: .gitattributes  Dockerfile  README.md
docker/irods_catalog/: Dockerfile
docker/irods_catalog_provider/: Dockerfile  Dockerfile_4.2.12  entrypoint.sh  setup-4.2.12.input  setup-4.3.4.input
docker/irods_client/: Dockerfile  entrypoint.sh  ibridges_config.json  integration_test.py  requirements.txt
docs/: Makefile  commandlineclient.qmd  developer.md  developer.qmd  getting-started.qmd  info.qmd  requirements.txt  roadmap.qmd  userdoc.qmd
docs/source/: api.rst  cli.rst  conf.py  data_transfers.rst  faq.rst  ibridges_cli.rst  ibridges_python.rst  index.rst  install.rst  ipath.rst  irods_search.rst  metadata.rst  quickstart.rst  session.rst  sync.rst
gui/: IrodsBrowser.py  IrodsDataBundle.py  IrodsExampleTab.py  IrodsUpDownload.py  __init__.py  amberWorkflow.py  checkableFsTree.py  continousUpload.py  dataTransfer.py  elabUpload.py  irodsBrowser.py  irodsCreateTicket.py  irodsDataCompression.py  irodsInfo.py  irodsSearch.py  irodsTicketLogin.py  irodsTreeView.py  irodsUpDownload.py  mainmenu.py  popupWidgets.py  requirements.txt
gui/ui-files/: MainMenu.ui  irodsLogin.ui  tabBrowser.ui  tabDataBundle.ui  tabDataCompression.ui  tabELNData.ui  tabInfo.ui  tabTicketAccess.ui  tabTicketCreate.ui  tabUpDownload.ui
gui/ui_files/: ExampleTab.py  ExampleTab.ui  MainMenu.py  MainMenu.ui  __init__.py  createCollection.py  createCollection.ui  dataTransferState.py  dataTransferState.ui  irodsIndexPopup.py  irodsIndexPopup.ui  irodsLogin.py  irodsLogin.ui  searchDialog.py  searchDialog.ui  tabAmberData.py  tabAmberData.ui  tabBrowser.py  tabBrowser.ui  tabDataBundle.py  tabDataBundle.ui  tabDataCompression.py  tabDataCompression.ui  tabELNData.py  tabELNData.ui  tabFederations.py  tabFederations.ui  tabInfo.py  tabInfo.ui  tabPage.py  tabPage.ui  tabTicketAccess.py  tabTicketAccess.ui  tabTicketCreate.py  tabTicketCreate.ui  tabUpDownload.py  tabUpDownload.ui
iBridgesUploadClient/: README.md  elabConfig  elabConnector.py  iBridges - Upload client.md  iUpload.py  irodsConnector.py  irodsConnectorIcommands.py
ibridges/: __init__.py  __main__.py  authenticate.py  base_operations.py  data_operations.py  data_query.py  exception.py  executor.py  export_metadata.py  icat_columns.py  interactive.py  keywords.py  manager.py  meta.py  path.py  path_test.ipynb  permissions.py  resources.py  rules.py  search.py  session.py  sync.py  tickets.py  transfer_manager.py  util.py
ibridges/cli/: __init__.py  __main__.py  base.py  config.py  data_operations.py  meta.py  navigation.py  other.py  permission.py  shell.py  util.py
ibridges/connector/: manager.py  meta.py  permission.py  rules.py  session.py  tickets.py
ibridges/irodsconnector/: data_operations.py  keywords.py  manager.py  meta.py  permission.py  permissions.py  resources.py  rules.py  session.py  sync.py  tickets.py
ibridges/utils/: __init__.py  amber_connector.py  context.py  elab_plugin.py  json_config.py  path.py  sync_result.py
ibridgesConnector/: manager.py
irods-basicGUI/: README.md  UpDownload.py  UpDownloadCheck.py  checkableFsTree.py  continousUpload.py  createCollectionWidget.py  createDirectory.py  customTreeViews.py  dataTransfer.py  elabConnector.py  elabUpload.py  elnUpload.py  irods-basicGui.py  irodsBrowser.py  irodsBrowser.ui  irodsBrowserMain.ui  irodsConnector.py  irodsConnectorIcommands.py  irodsCreateCollection.py  irodsDataCompression.py  irodsLogin.py  irodsLogin.ui  irodsSearch.py  irodsTabview.py  irodsTreeView.py  irodsUpDownload.py  irodsUtils.py  mainmenu.py  popupWidgets.py  requirements.txt  testIrodsTree.py  utils.py
irods-basicGUI/rules/: tarCollection.r  tarExtract.r  tarReadIndex.r
irods-basicGUI/ui-files/: BrowserTab.ui  ELNDataTab.ui  FederationsTab.ui  MainMenu.ui  irodsLogin.ui  (+13 more)
irods-elab-upload/: .experimental.py.swp  experimental.py
irods-iBridgesGui/: dataTransfer.py  elabConnector.py  elabUpload.py  irods-iBridgesGui.py  irodsBrowser.py  irodsConnector.py  irodsConnectorIcommands.py  irodsSearch.py  irodsTreeView.py  irodsUpDownload.py  mainmenu.py  utils.py
irodsConnector/: Anonymous.py  AnonymousManager.py  Icommands.py  __init__.py  dataOperations.py  keywords.py  manager.py  meta.py  permission.py  pythonClient.py  query.py  resource.py  resources.py  rules.py  session.py  tickets.py  users.py  utils.py
meta/: __init__.py  csv_parser.py  json_parser.py  metadataFileParser.py  xml_parser.py
old/: _version.py  data_query.py  manager.py
rules/: tarExtractOne.r
test/: test_icommands.py  test_utils.py
tests/: test_dummy.py  test_irodspath.py
tutorials/: 00-FirstSteps.ipynb  01-Setup-and-connect.ipynb  01-iRODS-paths.ipynb  02-Working-with-data.ipynb  02-iRODS-paths.ipynb  03-Working-with-data.ipynb  03-iRODS-Paths.ipynb  04-Metadata.ipynb  05-Data-Sharing.ipynb  06-Data-sync.ipynb  07-Streaming-iRODS-data.ipynb  Data_sync.ipynb  QuickStart.ipynb  iRODS_paths.ipynb  sync.ipynb
utils/: AmberConnector.py  IbridgesContext.py  IrodsConnector.py  IrodsConnectorAnonymous.py  IrodsConnectorIcommands.py  __init__.py  context.py  elabConnector.py  elab_plugin.py  irodsConnector.py  irodsConnectorAnonymous.py  irodsConnectorIcommands.py  json_config.py  path.py  sync_result.py  utils.py
(+52 files in other folders)
