[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ibridges"
authors = [
    { name = "Christine Staiger", email = "c.staiger@uu.nl" },
]
description = "Package for accessing data and metadata on iRods servers."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["irods", "data management", "storage"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "python-irodsclient==1.1.6",
    "setproctitle==1.3.2",
    "tqdm",
]

dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/UtrechtUniversity/iBridges"
documentation = "https://github.com/UtrechtUniversity/iBridges"

[project.optional-dependencies]
test = [
    "flake8==6.0.0",
    "pylint==2.16.2",
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "mypy"
]


[tool.setuptools]
packages = ["ibridges"]

[tool.setuptools_scm]
write_to = "ibridges/_version.py"

[[tool.mypy.overrides]]
module = [
    "irods.*",
]
ignore_missing_imports = true

[tool.pylint.'MASTER']
 ignore-patterns="_version.py"

[tool.pylint.'BASIC']
good-names=["e", "f", "m"]


[tool.pylint.'FORMAT']
max-line-length=100
max-locals=35
max-args=10

[tool.ruff]
exclude = ["_version.py"]
line-length = 100
select = ["E", "F", "W", "I", "N"]
